kubernetes/argocd/moonbase/manifests/rest-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-server
  namespace: rest-server
spec:
  selector:
    app: rest-server
  ports:
    - name: http
      port: 8000
      targetPort: http
